# medcenter-app

./: .env.sample  .gitattributes  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  schema.sql
app/: Dockerfile  __init__.py  __main__.py
app/config/: default.py  utils.py
app/db/: alembic.ini
app/db/connection/: session.py
app/db/enums/: __init__.py  visit.py
app/db/migrator/: env.py
app/db/migrator/versions/: 072ab0e3fab9_client_doctor_visit.py  3896c407a6e4_add_full_name_column_into_db.py  V1_client_doctor_visit.py  V2_add_phone_number_unique_index.py  V3_add_full_name_column_into_db.py  V4_changed_visit_date_time_structure.py  V5_added_cabinet_to_visit.py  V6_change_visit_status_enum.py  e443d02f9065_add_phone_number_unique_index.py
app/db/models/: __init__.py  base.py  client.py  doctor.py  human.py  visit.py
app/routes/: __init__.py  client.py  clients.py  doctors.py  visits.py
app/schemas/: __init__.py  base.py  client.py  doctor.py  human.py  page.py  visit.py
app/sql/: seed_medcenter.sql
app/utils/client/: __init__.py  database.py
app/utils/common/: __init__.py  split_full_name.py
app/utils/doctor/: __init__.py  database.py
app/utils/visit/: __init__.py  database.py  service.py
nginx/: .htpasswd  nginx.conf
web/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: index.ts  types.ts  visits.ts
web/src/components/: EntityLink.tsx  EntityManager.tsx  EntitySelect.tsx
web/src/components/visits/: VisitsManager.tsx  VisitsPrintSheet.tsx  printConsts.ts
web/src/lib/: api.ts  errors.ts  phone.ts
web/src/pages/: ClientProfilePage.tsx  ClientsPage.tsx  DoctorProfilePage.tsx  DoctorsPage.tsx  VisitDetailPage.tsx  VisitsPage.tsx
