[tool.poetry]
name = "medcenter-app"
version = "0.1.0"
description = "Web application for a medical center built with FastAPI and PostgreSQL: patient management, doctor scheduling, and PDF reports."
authors = ["Max Gavrilov <maxim.gavrilov.2008@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
